project structure 변경

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -2,18 +2,19 @@
 module = main
 callable = app
 
-venv = /home/ec2-user/app/apiServer/venv
-chdir = /home/ec2-user/app/apiServer
+venv = /home/ec2-user/app/repo/devApiServer/venv
+chdir = /home/ec2-user/app/repo/devApiServer
 
 master = true
-processes = 4
+processes = 2
+http-socket = :5000
 
-socket = /home/ec2-user/app/apiServer/flask.sock
+socket = /home/ec2-user/app/repo/devApiServer/flask.sock
 chmod-socket = 666
 chown-socket = ec2-user:ec2-user
 
 vacuum = true
 
-daemonize = /home/ec2-user/app/logs/uwsgi.log
+daemonize = /home/ec2-user/app/logs/dev-uwsgi.log
 
 die-on-term = true
