--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -2,19 +2,28 @@
 module = main
 callable = app
 
+if-env = UWSGI_DEVENV
+print = current uwsgi environment is %(_)
 venv = /home/ec2-user/app/repo/devApiServer/venv
 chdir = /home/ec2-user/app/repo/devApiServer
+socket = /home/ec2-user/app/repo/devApiServer/flask.sock
+daemonize = /home/ec2-user/app/logs/dev-uwsgi.log
+http-socket = :5000
+processes = 2
+endif =
+
+if-not-env = UWSGI_DEVENV
+venv = /home/ec2-user/app/apiServer/venv
+chdir = /home/ec2-user/app/apiServer
+socket = /home/ec2-user/app/apiServer/flask.sock
+daemonize = /home/ec2-user/app/logs/uwsgi.log
+processes = 4
+endif =
 
 master = true
-processes = 2
-http-socket = :5000
 
-socket = /home/ec2-user/app/repo/devApiServer/flask.sock
 chmod-socket = 666
 chown-socket = ec2-user:ec2-user
 
 vacuum = true
-
-daemonize = /home/ec2-user/app/logs/dev-uwsgi.log
-
 die-on-term = true
