MSA 적용을 위한 Docker 추가

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -2,28 +2,14 @@
 module = main
 callable = app
 
-if-env = UWSGI_DEVENV
-print = current uwsgi environment is %(_)
-venv = /home/ec2-user/app/repo/devApiServer/venv
-chdir = /home/ec2-user/app/repo/devApiServer
-socket = /home/ec2-user/app/repo/devApiServer/flask.sock
-daemonize = /home/ec2-user/app/logs/dev-uwsgi.log
-http-socket = :5000
+#daemonize = /flaskapi/uwsgi.log
+#http-socket = :5000
+socket = /flaskapi/socket/flask.sock
 processes = 2
-endif =
-
-if-not-env = UWSGI_DEVENV
-venv = /home/ec2-user/app/apiServer/venv
-chdir = /home/ec2-user/app/apiServer
-socket = /home/ec2-user/app/apiServer/flask.sock
-daemonize = /home/ec2-user/app/logs/uwsgi.log
-processes = 4
-endif =
-
-master = true
 
 chmod-socket = 666
 chown-socket = ec2-user:ec2-user
 
+master = true
 vacuum = true
 die-on-term = true
