--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,30 @@
 attrs==23.1.0
-aws-cfn-bootstrap==2.0
 certifi==2023.7.22
-charset-normalizer==3.3.0
+charset-normalizer==3.3.2
 click==8.1.7
-docutils==0.14
 exceptiongroup==1.1.3
 Flask==2.2.5
-future==0.18.3
+Flask-Cors==4.0.0
 h11==0.14.0
 idna==3.4
 importlib-metadata==6.7.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-lockfile==0.11.0
 MarkupSafe==2.1.3
 outcome==1.3.0.post0
 packaging==23.2
 PySocks==1.7.1
-pystache==0.5.4
-python-daemon==2.2.3
 python-dotenv==0.21.1
 requests==2.31.0
 selenium==4.11.2
-simplejson==3.2.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 trio==0.22.2
 trio-websocket==0.11.1
 typing_extensions==4.7.1
-urllib3==2.0.5
+urllib3==1.26.18
 uWSGI==2.0.22
+webdriver-manager==4.0.1
 Werkzeug==2.2.3
 wsproto==1.2.0
 zipp==3.15.0
